# University

Semester 1/Computer systems architecture - Rechnerarchitektur/: Ubung1.asm  Ubung2.asm  Ubung3.asm  Ubung4.asm  Ubung5.asm  Ubung6.asm  Ubung7.asm  Ubung8 - function.asm  Ubung8 - modul.asm  Ubung9.asm
Semester 1/Programming foundations - Grundlagen der Programmierung/: Labor1a.py  Labor1b.py  Labor2.py  Labor3.py  Oneline - Fibonacci.py  Oneline - Reverse word.py  Seminar2.py  Seminar3.py  Seminar4.py  Seminar5.py  Seminar7.py
Semester 1/Programming foundations - Grundlagen der Programmierung/Ersetzen/: ersetzen.txt  ersetzen_in_out.py  ersetzen_logik.py  main.py
Semester 1/Programming foundations - Grundlagen der Programmierung/Labor4/: L4_in_out.py  L4_logik.py  Zeichen.txt  main.py
Semester 1/Programming foundations - Grundlagen der Programmierung/Labor5 - Teamprojekt/: Bestellungen  Essen  Getranke  Kunden  app.py  controller.py  modelle.py  repository.py  ui.py
Semester 2/Data systems and algorithms - Datenstrukturen und Algorithmen/Bag - Elements + Positions/: CMakeLists.txt
Semester 2/Data systems and algorithms - Datenstrukturen und Algorithmen/Bag - Elements + Positions/Bag/: Bag.cpp  Bag.h  BagIterator.cpp  BagIterator.h  ShortTest.cpp  pseudocod_method_removeMaxFreq
Semester 2/Data systems and algorithms - Datenstrukturen und Algorithmen/IteratedList - SLL/: CMakeLists.txt
Semester 2/Data systems and algorithms - Datenstrukturen und Algorithmen/IteratedList - SLL/IteratedList/: App.cpp  CMakeLists.txt  IteratedList.cpp  IteratedList.h  ListIterator.cpp  ListIterator.h  ShortTest.cpp
Semester 2/Data systems and algorithms - Datenstrukturen und Algorithmen/Set/: CMakeLists.txt
Semester 2/Data systems and algorithms - Datenstrukturen und Algorithmen/Set/Set/: ExtendedTest.cpp  Set.cpp  Set.h  SetIterator.cpp  SetIterator.h  pseudocod_method_equal.txt
Semester 2/Object oriented programming - Objekt-Orientierte Programmierung/ElektroScooter - Teamprojekt/: CMakeLists.txt  CSV_Repository.cpp  CSV_Repository.h  Controller.cpp  Controller.h  Domain.cpp  Domain.h  Electric_Scooter_Gui.h  Electric_Scooter_details_dialog.cpp  Electric_Scooter_details_dialog.h  Electric_scooter_Gui.cpp  InMemory_Repository.cpp  InMemory_Repository.h  Repository.h  Tests.cpp  Tests.h  UI.cpp  UI.h  main.cpp  scooters.txt
Semester 2/Operating Systems - Betriebsysteme/: Ubung1.sh  Ubung10.sh  Ubung11.c  Ubung2.sh  Ubung3.sh  Ubung4.sh  Ubung5.sh  Ubung6.c  Ubung7.c  Ubung8.c  Ubung9.c
Semester 3/Databases - Datenbanken/: Labor1.sql  Labor2.sql  Labor3.sql  Labor4.sql  Labor5.sql  labor4_2.sql
(+94 files in other folders)
